# Picoware

./: .gitignore  Development.md  README.md
builds/: Picoware-JBlanked.uf2  Picoware-PicoCalcPico.uf2  Picoware-PicoCalcPico2.uf2  Picoware-PicoCalcPico2W.uf2  Picoware-PicoCalcPicoW.uf2  Picoware-VGM.uf2
guides/: Apps.md  Basics.md  Boards.md  CONTRIBUTING.md  Cardputer.md  CrowPanel.md  Development.md  Installation.md  Libraries.md  PicoCalcKit.md  Tutorials.md  Updates.md  VideoGameModule.md
src/: animation.hpp  config.hpp  enemy.hpp  game.cpp  game.hpp  general.hpp  level.cpp  level.hpp  loading.cpp  player.cpp  player.hpp  projectile.cpp  sky.cpp  sky.hpp  sound.cpp  sound.hpp  (+2 more)
src/MicroPython/Cardputer/: CMakeLists.txt  board_config.h  micropython.cmake  mpconfigboard.h  partitions.csv  sdkconfig  sdkconfig.defaults
src/MicroPython/Cardputer/battery/: battery.c  battery.h  battery_mp.c  battery_mp.h  micropython.cmake
src/MicroPython/Cardputer/keyboard/: keyboard.c  keyboard.h  keyboard_mp.c  keyboard_mp.h  micropython.cmake
src/MicroPython/Cardputer/lcd/: lcd.c  lcd.h  micropython.cmake
src/MicroPython/Cardputer/sd/: micropython.cmake  sd_mp.c  sd_mp.h  sdcard.c  sdcard.h  sdcard_vfs_bridge.c  sdcard_vfs_bridge.h  storage.c  storage.h  vfs_fat_compat.h
src/SDK/Picoware/src/applications/: CMakeLists.txt
src/SDK/Picoware/src/applications/applications/: CMakeLists.txt  applications.hpp
src/SDK/Picoware/src/applications/applications/GPS/: GPS.hpp
src/SDK/Picoware/src/applications/applications/Weather/: weather.hpp
src/SDK/Picoware/src/applications/applications/flip_social/: feed.hpp  flip_social.hpp  pass.hpp  post.hpp  run.cpp  run.hpp  settings.hpp  user.hpp  utils.hpp
src/SDK/Picoware/src/applications/desktop/: CMakeLists.txt  desktop.hpp  frames.hpp
src/SDK/Picoware/src/applications/games/: CMakeLists.txt  flipper.cpp  flipper.hpp  games.hpp
src/SDK/Picoware/src/applications/games/arkanoid/: arkanoid.hpp  game.cpp  game.hpp
src/SDK/Picoware/src/applications/games/doom/: assets.cpp  assets.hpp  constants.hpp  display.cpp  display.hpp  doom.hpp  entities.hpp  game.cpp  game.hpp  icon.cpp  icon.hpp  level.hpp  types.cpp  types.hpp
src/SDK/Picoware/src/applications/games/flappybird/: flappybird.hpp  game.cpp  game.hpp
src/SDK/Picoware/src/applications/games/flightassault/: flightassault.hpp  game.cpp  game.hpp
src/SDK/Picoware/src/applications/games/furiousbirds/: furiousbirds.hpp  game.cpp  game.hpp
src/SDK/Picoware/src/applications/games/labyrinth/: game.cpp  game.hpp  labyrinth.hpp
src/SDK/Picoware/src/applications/games/pong/: game.cpp  game.hpp  pong.hpp
src/SDK/Picoware/src/applications/games/spaceinvaders/: game.cpp  game.hpp  spaceinvaders.hpp
src/SDK/Picoware/src/applications/games/tetris/: game.cpp  game.hpp  tetris.hpp
src/SDK/Picoware/src/applications/games/trexrunner/: game.cpp  game.hpp  trexrunner.hpp
src/SDK/Picoware/src/applications/screensavers/: CMakeLists.txt  screensavers.hpp
src/SDK/Picoware/src/applications/screensavers/cube/: cube.hpp
src/SDK/Picoware/src/applications/screensavers/spiro/: spiro.hpp
src/SDK/Picoware/src/applications/screensavers/starfield/: starfield.hpp
src/SDK/Picoware/src/applications/system/: CMakeLists.txt  about.hpp  system.hpp  system_info.hpp
src/SDK/Picoware/src/applications/wifi/: CMakeLists.txt  connect.hpp  pass.hpp  scan.hpp  settings.hpp  ssid.hpp  utils.hpp  wifi.hpp
src/SDK/Picoware/src/system/: CMakeLists.txt  app_loader.cpp  app_loader.hpp  binary_app.cpp  binary_app.hpp  buttons.hpp  certs.hpp  colors.hpp  helpers.cpp  helpers.hpp  http.cpp  http.hpp  input.cpp  input.hpp  led.cpp  led.hpp  lwipopts.h  psram.cpp  psram.hpp  storage.cpp  storage.hpp  system.hpp  uf2_loader.cpp  uf2_loader.hpp  view.hpp  view_manager.cpp  view_manager.hpp  wifi.cpp  wifi.hpp
src/SDK/Picoware/src/system/drivers/: CMakeLists.txt  fat32.c  fat32.h  font.h  keyboard.h  lcd.c  lcd.h  sdcard.c  sdcard.h  southbridge.h
src/SDK/Picoware/src/system/drivers/jsmn/: CMakeLists.txt  jsmn.c  jsmn.h  jsmn_h.c  jsmn_h.h
(+1191 files in other folders)
